--- a/Scoring_MGDPData/App.Config
+++ b/Scoring_MGDPData/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Scoring_MGDPEntities" connectionString="metadata=res://*/Scoring_MGDPModel.csdl|res://*/Scoring_MGDPModel.ssdl|res://*/Scoring_MGDPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASBOPPMP01;initial catalog=GestionProv;persist security info=True;user id=sa;password=sqlserver/2017;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Scoring_MGDPEntities" connectionString="metadata=res://*/Scoring_MGDPModel.csdl|res://*/Scoring_MGDPModel.ssdl|res://*/Scoring_MGDPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=1NEH0773\SQLEXPRESS;initial catalog=GestionProv;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
