--- a/Scoring_MGDP/Scoring_MGDP.csproj
+++ b/Scoring_MGDP/Scoring_MGDP.csproj
@@ -214,8 +214,10 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClasifProveedoresController.cs" />
     <Compile Include="Controllers\ContratoProvController.cs" />
+    <Compile Include="Controllers\DefMetricasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MedicionesMetricasController.cs" />
     <Compile Include="Controllers\MetricasController.cs" />
     <Compile Include="Controllers\ProveedoresController.cs" />
     <Compile Include="Controllers\ScoringConfigFrentesController.cs" />
@@ -235,6 +237,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\ClasifProveedoresViewModel.cs" />
+    <Compile Include="ViewModel\DefMetricasViewModel.cs" />
+    <Compile Include="ViewModel\MedicionesMetricasViewModel.cs" />
     <Compile Include="ViewModel\ScoringConfigFrentesViewModel.cs" />
     <Compile Include="ViewModel\ScoringConfigMedidasViewModel.cs" />
     <Compile Include="ViewModel\ContratoProvViewModel.cs" />
@@ -242,6 +246,7 @@
     <Compile Include="ViewModel\ProveedorViewModel.cs" />
     <Compile Include="ViewModel\TipoGestionProvViewModel.cs" />
     <Compile Include="ViewModel\TiposMetricasViewModel.cs" />
+    <Compile Include="ViewModel\TiposProyectosViewModel.cs" />
     <Compile Include="ViewModel\UnidadesMedidasViewModel.cs" />
     <Compile Include="ViewModel\YesNoViewModel.cs" />
   </ItemGroup>
@@ -519,6 +524,15 @@
     <Content Include="Views\ScoringConfigMedidas\Delete.cshtml" />
     <Content Include="Views\ScoringConfigMedidas\Edit.cshtml" />
     <Content Include="Views\ScoringConfigMedidas\Index.cshtml" />
+    <Content Include="Views\MedicionesMetricas\Create.cshtml" />
+    <Content Include="Views\MedicionesMetricas\Delete.cshtml" />
+    <Content Include="Views\MedicionesMetricas\Details.cshtml" />
+    <Content Include="Views\MedicionesMetricas\Index.cshtml" />
+    <Content Include="Views\DefMetricas\Create.cshtml" />
+    <Content Include="Views\DefMetricas\Delete.cshtml" />
+    <Content Include="Views\DefMetricas\Details.cshtml" />
+    <Content Include="Views\DefMetricas\Edit.cshtml" />
+    <Content Include="Views\DefMetricas\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
